# palautusrepositorio

./: README.md
Viikko1/nhl-statistics-1 /: ..coveragerc.swp  .coveragerc.save
Viikko1/nhl-statistics-1 /src/: statistics.py
Viikko4/maksukortti-mock/src/: kassapaate.py
Viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
Viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko1/nhl-statistics-1 /src/: statistics.py
viikko1/nhl-statistics-1 /src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/src/tests/: register.robot
viikko3/src/: index.py  player.py  playerReader.py  playerStats.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko5/: kissa
viikko5/tennis/src/: tennis_game.py
