[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Niina-Maria Takalo <niina-maria.takalo@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
